--- a/index.html
+++ b/index.html
@@ -1,118 +1,20 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <script src="app.js" charset="utf-8"></script>
-    <link rel="stylesheet" href="style.css">
-    <title>Snake Tutorial</title>
-  </head>
-  <body>
-
-    <button class='start'>Start/Restart</button>
-    <div class='score'>Score:<span>0</span></div>
-
-    <div class='grid'>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
+<div id="wrapper">
+  <div id="quote-box">
+    <div class="quote-text">
+      <i class="fa fa-quote-left"> </i><span id="text"></span>
     </div>
-
-  </body>
-</html>
+    <div class="quote-author">
+      - <span id="author"></span>
+    </div>
+    <div class="buttons">
+      <a class="button" id="tweet-quote" title="Tweet this quote!" target="_blank">
+        <i class="fa fa-twitter"></i>
+      </a>
+      <a class="button" id="tumblr-quote" title="Post this quote on tumblr!" target="_blank">
+        <i class="fa fa-tumblr"></i>
+      </a>
+      <button class="button" id="new-quote">New quote</button>
+    </div>
+  </div>
+  <div class="footer"> by <a href="https://codepen.io/hezag/">hezag</a></div>
+</div>
