--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
     	<meta charset="utf-8">
     	<script src="ss.js" charset="utf-8"></script>
-    	<link rel="style" href="slyle.css">
+    	<link rel="stylesheet" href="style.css">
     	<title>Snake</title>
   	</head>
  	<body>
