--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  		<div class="score">Score: <span>0</span></div>
 
  		<div class="grid">
- 			<div class="snake"></div>
+ 			<div></div>
  			<div></div>
  			<div></div>
  			<div></div>
