--- a/index.html
+++ b/index.html
@@ -1,116 +1,120 @@
 <!DOCTYPE html>
 <html>
 	<head>
-    	<meta charset="utf-8">
-    	<script src="ss.js" charset="utf-8"></script>
-    	<link rel="stylesheet" href="style.css">
-    	<title>Snake</title>
+		<meta charset="utf-8">
+		<script src="ss.js" charset="utf-8"></script>
+		<link rel="stylesheet" href="style.css">
+		<!--Bootstrap-->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
+		<title>Snake</title>
   	</head>
  	<body>
- 		<button class="start">Start/Restart</button>
- 		<div class="score">Score: <span>0</span></div>
+		<div class="fluid-container">
+			<button class="start">Start/Restart</button>
+			<div class="score">Score: <span>0</span></div>
 
- 		<div class="grid">
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 			<div></div>
- 		</div>
+			<div class="grid">
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+			</div>
+		</div>
  	</body>
 </html>
