--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<button class="start">Start/Restart</button>
 			<div class="score">Score: <span>0</span></div>
 
-			<div class="grid">
+			<div class="grid row">
 				<div></div>
 				<div></div>
 				<div></div>
