--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<button class="start">Start/Restart</button>
 		<div class="score">Score: <span>0</span></div>
 
-		<div class="grid row">
+		<div class="grid">
 			<div></div>
 			<div></div>
 			<div></div>
